Add regional dashboard code

--- a/anp_process/create_view_1.ipynb
+++ b/anp_process/create_view_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
     "media = pd.DataFrame(columns = ['Date', 'Brand', 'Province', 'Total Media'])\n",
     "pc = pd.DataFrame(columns = ['Date', 'Brand', 'Province', 'Total PC'])\n",
     "\n",
-    "nav_columns = ['Date', 'Brand', 'Province', 'Attribute', 'Value']\n",
+    "nav_columns = ['Date', 'Brand', 'Province', 'Attribute', 'Attribute2', 'Value']\n",
     "view_1_output_nav = pd.DataFrame(columns = nav_columns)"
    ]
   },
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,12 +98,12 @@
     "\n",
     "input_df = pd.read_excel(input_file_path, dtype=str)\n",
     "input_df['Value'] = input_df['Value'].astype('float')\n",
-    "past_years_df = input_df"
+    "past_years_df = input_df.groupby(by = ['Date', 'Brand', 'Province', 'Attribute', 'Attribute2'])['Value'].sum().reset_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,19 +158,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def form_kpi_input(input_df):\n",
-    "    input_df = input_df[['Date', 'Brand', 'Province', 'KPI', 'KPI_value']]\n",
+    "    input_df = input_df[['Date', 'Brand', 'Province', 'KPI', 'KPI_value']].copy()\n",
     "    input_df.columns = ['Date', 'Brand', 'Province', 'Attribute', 'Value']\n",
+    "    input_df['Attribute2'] = input_df['Attribute']\n",
+    "    input_df = input_df[nav_columns]\n",
     "    return input_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,19 +267,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "ms_temp_df = form_kpi_input(ms_temp_df)\n",
     "ms_temp_df['Attribute'] = ms_temp_df['Brand'].apply(lambda x : form_market_share_name(x))\n",
+    "ms_temp_df['Attribute2'] = ms_temp_df['Brand'].apply(lambda x : form_market_share_name(x))\n",
     "ms_temp_df['Brand'] = ms_temp_df['Brand'].apply(lambda x : get_brand_name(x))\n",
     "view_1_output_nav = view_1_output_nav.append(ms_temp_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,20 +299,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "wtd_temp_df = input_df.loc[(input_df['Brand'] != 'ELN') & (input_df['KPI'] == 'WTD')]\n",
     "wtd_temp_df = form_kpi_input(wtd_temp_df)\n",
     "wtd_temp_df['Attribute'] = wtd_temp_df['Attribute'] + ' - ' + wtd_temp_df['Brand']\n",
+    "wtd_temp_df['Attribute2'] = wtd_temp_df['Attribute']\n",
     "wtd_temp_df['Brand'] = wtd_temp_df['Brand'].apply(lambda x : get_brand_name(x))\n",
     "view_1_output_nav = view_1_output_nav.append(wtd_temp_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,14 +366,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "temp_df = input_df.copy()\n",
     "temp_df = form_kpi_input(temp_df)\n",
     "temp_df['Brand'] = temp_df['Brand'].apply(lambda x : get_brand_name(x))\n",
-    "temp_df = temp_df.groupby(by = ['Date', 'Brand', 'Province', 'Attribute'])['Value'].sum().reset_index()\n",
+    "temp_df = temp_df.groupby(by = ['Date', 'Brand', 'Province', 'Attribute', 'Attribute2'])['Value'].sum().reset_index()\n",
     "view_1_output_nav = view_1_output_nav.append(temp_df)"
    ]
   },
@@ -382,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,14 +412,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "temp_df = input_df[['Date', 'Brand', 'Province', 'Cost_type_1', 'Value']].copy()\n",
+    "temp_df = input_df[['Date', 'Brand', 'Province', 'Cost_type_1', 'Cost_type_1', 'Value']].copy()\n",
     "temp_df.columns = nav_columns\n",
     "temp_df['Brand'] = temp_df['Brand'].apply(lambda x : get_brand_name(x))\n",
-    "temp_df = temp_df.groupby(by = ['Date', 'Brand', 'Province', 'Attribute'])['Value'].sum().reset_index()\n",
+    "temp_df = temp_df.groupby(by = ['Date', 'Brand', 'Province', 'Attribute', 'Attribute2'])['Value'].sum().reset_index()\n",
     "view_1_output_nav = view_1_output_nav.append(temp_df)"
    ]
   },
@@ -428,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,10 +457,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "temp_df = input_df.groupby(by = ['Date', 'Brand', 'Province'])['Value'].sum().reset_index()\n",
     "temp_df['Attribute'] = 'Total Media'\n",
@@ -467,26 +469,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
+    "input_df['Cost_type_2'] = input_df['AIP'] + ' - ' + input_df['Cost_type_2']\n",
     "temp_df = input_df.groupby(by = ['Date', 'Brand', 'Province', 'Cost_type_2'])['Value'].sum().reset_index()\n",
-    "temp_df['Attribute'] = temp_df['Cost_type_2']\n",
-    "temp_df = temp_df[['Date', 'Brand', 'Province', 'Attribute', 'Value']]\n",
+    "temp_df['Attribute2'] = temp_df['Cost_type_2']\n",
+    "temp_df['Attribute'] = 'Total Media-TYPE'\n",
+    "temp_df = temp_df[nav_columns]\n",
     "temp_df.columns = nav_columns\n",
     "view_1_output_nav = view_1_output_nav.append(temp_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "temp_df = input_df.groupby(by = ['Date', 'Brand', 'Province', 'Cost_type_3'])['Value'].sum().reset_index()\n",
-    "temp_df['Attribute'] = temp_df['Cost_type_3']\n",
-    "temp_df = temp_df[['Date', 'Brand', 'Province', 'Attribute', 'Value']]\n",
+    "temp_df['Attribute2'] = temp_df['Cost_type_3']\n",
+    "temp_df['Attribute'] = 'Total Media-Channel Platform'\n",
+    "temp_df = temp_df[nav_columns]\n",
     "temp_df.columns = nav_columns\n",
     "view_1_output_nav = view_1_output_nav.append(temp_df)"
    ]
@@ -500,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,10 +530,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "temp_df = input_df.groupby(by = ['Date', 'Brand', 'Province'])['Value'].sum().reset_index()\n",
     "temp_df['Attribute'] = 'Total CRM'\n",
@@ -539,13 +542,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "temp_df = input_df.groupby(by = ['Date', 'Brand', 'Province', 'Cost_type_2'])['Value'].sum().reset_index()\n",
-    "temp_df['Attribute'] = temp_df['Cost_type_2']\n",
-    "temp_df = temp_df[['Date', 'Brand', 'Province', 'Attribute', 'Value']]\n",
+    "temp_df['Attribute2'] = temp_df['Cost_type_2']\n",
+    "temp_df['Attribute'] = 'Total CRM'\n",
+    "temp_df = temp_df[nav_columns]\n",
     "temp_df.columns = nav_columns\n",
     "view_1_output_nav = view_1_output_nav.append(temp_df)"
    ]
@@ -559,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,10 +587,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "temp_df = input_df.groupby(by = ['Date', 'Brand', 'Province'])['Value'].sum().reset_index()\n",
     "temp_df['Attribute'] = 'Total PC'\n",
@@ -597,13 +599,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "temp_df = input_df.groupby(by = ['Date', 'Brand', 'Province', 'Cost_type_2'])['Value'].sum().reset_index()\n",
-    "temp_df['Attribute'] = temp_df['Cost_type_2']\n",
-    "temp_df = temp_df[['Date', 'Brand', 'Province', 'Attribute', 'Value']]\n",
+    "temp_df['Attribute2'] = temp_df['Cost_type_2']\n",
+    "temp_df['Attribute'] = 'Total PC'\n",
+    "temp_df = temp_df[nav_columns]\n",
     "temp_df.columns = nav_columns\n",
     "view_1_output_nav = view_1_output_nav.append(temp_df)"
    ]
@@ -617,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,10 +646,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "temp_df = input_df.groupby(by = ['Date', 'Brand', 'Province'])['Value'].sum().reset_index()\n",
     "temp_df['Attribute'] = 'Total Channel'\n",
@@ -657,13 +658,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "temp_df = input_df.groupby(by = ['Date', 'Brand', 'Province', 'Cost_type_2'])['Value'].sum().reset_index()\n",
-    "temp_df['Attribute'] = temp_df['Cost_type_2']\n",
-    "temp_df = temp_df[['Date', 'Brand', 'Province', 'Attribute', 'Value']]\n",
+    "temp_df['Attribute2'] = temp_df['Cost_type_2']\n",
+    "temp_df['Attribute'] = 'Total Channel'\n",
+    "temp_df = temp_df[nav_columns]\n",
     "temp_df.columns = nav_columns\n",
     "view_1_output_nav = view_1_output_nav.append(temp_df)"
    ]
@@ -677,11 +679,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "AnP_temp = view_1_output_nav.loc[(view_1_output_nav['Attribute'] == 'Total Media')\n",
+    "AnP_temp = view_1_output_nav.loc[(view_1_output_nav['Attribute'] == 'Total Media-TYPE')\n",
     "                                | (view_1_output_nav['Attribute'] == 'Total CRM')\n",
     "                                | (view_1_output_nav['Attribute'] == 'Total PC')\n",
     "                                | (view_1_output_nav['Attribute'] == 'Total Channel')]"
@@ -689,11 +691,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "AnP_temp = AnP_temp.groupby(by = ['Date', 'Brand', 'Province'])['Value'].sum().reset_index()\n",
+    "AnP_temp = AnP_temp.groupby(by = ['Date', 'Brand', 'Province', 'Attribute'])['Value'].sum().reset_index()\n",
+    "AnP_temp['Attribute2'] = AnP_temp['Attribute']\n",
     "AnP_temp['Attribute'] = 'Total A&P'\n",
     "AnP_temp = AnP_temp[nav_columns]\n",
     "view_1_output_nav = view_1_output_nav.append(AnP_temp)"
@@ -701,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -718,36 +721,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ly_df =  view_1_output_nav.copy()\n",
-    "ly_df['Date'] = ly_df['Date'].astype(int)\n",
-    "ly_df['Date'] = ly_df['Date'] + 100\n",
-    "ly_df['Date'] = ly_df['Date'].astype(str)\n",
-    "ly_df.columns = ['Date', 'Brand', 'Province', 'Attribute', 'Value LY']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output_df = pd.merge(view_1_output_nav, ly_df, on=['Date', 'Brand', 'Province', 'Attribute'], how='left').fillna(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "an_df = output_df[~output_df['Attribute'].str.endswith('NC')][['Province', 'Attribute']].drop_duplicates()\n",
-    "nc_df = output_df[(~output_df['Attribute'].str.endswith('AC')) \n",
-    "                  & ( ~output_df['Attribute'].str.endswith('AP'))] \\\n",
-    "                    [['Province', 'Attribute']].drop_duplicates()\n",
+    "an_df = view_1_output_nav[~view_1_output_nav['Attribute'].str.endswith('NC')][['Province', 'Attribute', 'Attribute2']].drop_duplicates()\n",
+    "nc_df = view_1_output_nav[(~view_1_output_nav['Attribute'].str.endswith('AC')) \n",
+    "                  & ( ~view_1_output_nav['Attribute'].str.endswith('AP'))] \\\n",
+    "                    [['Province', 'Attribute', 'Attribute2']].drop_duplicates()\n",
     "an_df['Brand'] = 'Aptamil'\n",
     "nc_df['Brand'] = 'Nutrilon'\n",
     "all_df = an_df.append(nc_df, ignore_index=True)"
@@ -755,11 +736,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_dates_map = pd.DataFrame(columns=['Date', 'Brand', 'Province', 'Attribute'])\n",
+    "all_dates_map = pd.DataFrame(columns=['Date', 'Brand', 'Province', 'Attribute', 'Attribute2'])\n",
     "for i in range(1,13):\n",
     "    year_month = \"2018\" + str(i).zfill(2)\n",
     "    all_df['Date'] = year_month\n",
@@ -776,18 +757,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_df = pd.merge(all_dates_map, output_df, on=['Date', 'Brand', 'Province', 'Attribute'], how='left')\n",
+    "output_df = pd.merge(all_dates_map, view_1_output_nav, on=['Date', 'Brand', 'Province', 'Attribute', 'Attribute2'], how='left')\n",
     "\n",
-    "output_df = output_df.fillna({'Value': 0, 'Value LY': 0})"
+    "output_df = output_df.fillna({'Value': 0})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ly_df =  output_df.copy()\n",
+    "ly_df['Date'] = ly_df['Date'].astype(int)\n",
+    "ly_df['Date'] = ly_df['Date'] + 100\n",
+    "ly_df['Date'] = ly_df['Date'].astype(str)\n",
+    "ly_df.columns = ['Date', 'Brand', 'Province', 'Attribute', 'Attribute2',  'Value LY']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_df = pd.merge(output_df, ly_df, on=['Date', 'Brand', 'Province', 'Attribute', 'Attribute2'], how='left').fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_df = output_df.fillna({'Value LY': 0})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -799,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -819,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -842,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -865,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -875,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
