--- a/anp_process/merge_processed_data.ipynb
+++ b/anp_process/merge_processed_data.ipynb
@@ -184,11 +184,11 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Nielsen Value Market Share</td>\n",
-       "      <td>Nielsen Value Market Share</td>\n",
-       "      <td>Nielsen Value Market Share</td>\n",
-       "      <td>Nielsen Value Market Share</td>\n",
-       "      <td>Nielsen Value Market Share</td>\n",
+       "      <td>Market Share</td>\n",
+       "      <td>Market Share</td>\n",
+       "      <td>Market Share</td>\n",
+       "      <td>Market Share</td>\n",
+       "      <td>Market Share</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
@@ -243,32 +243,23 @@
        "</div>"
       ],
       "text/plain": [
-       "                       Level 1                     Level 2  \\\n",
-       "0   Nielsen Value Market Share  Nielsen Value Market Share   \n",
-       "18                    WTD - RI                    WTD - RI   \n",
-       "19               WTD - RI (AC)               WTD - RI (AC)   \n",
-       "20               WTD - RI (AP)               WTD - RI (AP)   \n",
-       "42                   WTD - MBS                   WTD - MBS   \n",
-       "43              WTD - MBS (AC)              WTD - MBS (AC)   \n",
-       "44              WTD - MBS (AP)              WTD - MBS (AP)   \n",
+       "           Level 1         Level 2         Level 3         Level 4  \\\n",
+       "0     Market Share    Market Share    Market Share    Market Share   \n",
+       "18        WTD - RI        WTD - RI        WTD - RI        WTD - RI   \n",
+       "19   WTD - RI (AC)   WTD - RI (AC)   WTD - RI (AC)   WTD - RI (AC)   \n",
+       "20   WTD - RI (AP)   WTD - RI (AP)   WTD - RI (AP)   WTD - RI (AP)   \n",
+       "42       WTD - MBS       WTD - MBS       WTD - MBS       WTD - MBS   \n",
+       "43  WTD - MBS (AC)  WTD - MBS (AC)  WTD - MBS (AC)  WTD - MBS (AC)   \n",
+       "44  WTD - MBS (AP)  WTD - MBS (AP)  WTD - MBS (AP)  WTD - MBS (AP)   \n",
        "\n",
-       "                       Level 3                     Level 4  \\\n",
-       "0   Nielsen Value Market Share  Nielsen Value Market Share   \n",
-       "18                    WTD - RI                    WTD - RI   \n",
-       "19               WTD - RI (AC)               WTD - RI (AC)   \n",
-       "20               WTD - RI (AP)               WTD - RI (AP)   \n",
-       "42                   WTD - MBS                   WTD - MBS   \n",
-       "43              WTD - MBS (AC)              WTD - MBS (AC)   \n",
-       "44              WTD - MBS (AP)              WTD - MBS (AP)   \n",
-       "\n",
-       "                       Level 5  \n",
-       "0   Nielsen Value Market Share  \n",
-       "18                    WTD - RI  \n",
-       "19               WTD - RI (AC)  \n",
-       "20               WTD - RI (AP)  \n",
-       "42                   WTD - MBS  \n",
-       "43              WTD - MBS (AC)  \n",
-       "44              WTD - MBS (AP)  "
+       "           Level 5  \n",
+       "0     Market Share  \n",
+       "18        WTD - RI  \n",
+       "19   WTD - RI (AC)  \n",
+       "20   WTD - RI (AP)  \n",
+       "42       WTD - MBS  \n",
+       "43  WTD - MBS (AC)  \n",
+       "44  WTD - MBS (AP)  "
       ]
      },
      "execution_count": 5,
@@ -1288,9 +1279,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>51</th>\n",
-       "      <td>Nielsen Value Market Share</td>\n",
-       "      <td>Nielsen Value Market Share</td>\n",
-       "      <td>Nielsen Value Market Share</td>\n",
+       "      <td>Market Share</td>\n",
+       "      <td>Market Share</td>\n",
+       "      <td>Market Share</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>316</th>\n",
@@ -1387,89 +1378,47 @@
        "</div>"
       ],
       "text/plain": [
-       "                           Type 1                      Type 2  \\\n",
-       "66                  WTD - RI (AP)               WTD - RI (AP)   \n",
-       "65                  WTD - RI (AC)               WTD - RI (AC)   \n",
-       "578                      WTD - RI                    WTD - RI   \n",
-       "64                 WTD - MBS (AP)              WTD - MBS (AP)   \n",
-       "63                 WTD - MBS (AC)              WTD - MBS (AC)   \n",
-       "577                     WTD - MBS                   WTD - MBS   \n",
-       "14                  Trade Support               Trade Support   \n",
-       "334         Total Brand Awareness       Total Brand Awareness   \n",
-       "12                      Total A&P                    Total PC   \n",
-       "13                      Total A&P                    Total PC   \n",
-       "9                       Total A&P                 Total Media   \n",
-       "10                      Total A&P                 Total Media   \n",
-       "11                      Total A&P                 Total Media   \n",
-       "6                       Total A&P               Total Channel   \n",
-       "7                       Total A&P               Total Channel   \n",
-       "8                       Total A&P               Total Channel   \n",
-       "325                     Total A&P               Total Channel   \n",
-       "4                       Total A&P                   Total CRM   \n",
-       "5                       Total A&P                   Total CRM   \n",
-       "318                     Total A&P                   Total CRM   \n",
-       "320                     Total A&P                   Total CRM   \n",
-       "321                     Total A&P                   Total CRM   \n",
-       "322                     Total A&P                   Total CRM   \n",
-       "324                     Total A&P                   Total CRM   \n",
-       "51     Nielsen Value Market Share  Nielsen Value Market Share   \n",
-       "316                    Landing UV                  Landing UV   \n",
-       "3                      IFFO Ratio                  IFFO Ratio   \n",
-       "10068                       Dummy                   Total A&P   \n",
-       "10069                       Dummy                   Total A&P   \n",
-       "10070                       Dummy                   Total A&P   \n",
-       "10071                       Dummy                   Total A&P   \n",
-       "314                 Deep Interest               Deep Interest   \n",
-       "2                  Danone Offtake              Danone Offtake   \n",
-       "312                 CRM NU Online               CRM NU Online   \n",
-       "1                  CRM NU Offline              CRM NU Offline   \n",
-       "310              CRM Leads Online            CRM Leads Online   \n",
-       "0               CRM Leads Offline           CRM Leads Offline   \n",
-       "46                   Baidu Search                Baidu Search   \n",
-       "45                     Ali Search                  Ali Search   \n",
-       "306                  Active Leads                Active Leads   \n",
-       "\n",
-       "                           Type 3  \n",
-       "66                  WTD - RI (AP)  \n",
-       "65                  WTD - RI (AC)  \n",
-       "578                      WTD - RI  \n",
-       "64                 WTD - MBS (AP)  \n",
-       "63                 WTD - MBS (AC)  \n",
-       "577                     WTD - MBS  \n",
-       "14                  Trade Support  \n",
-       "334         Total Brand Awareness  \n",
-       "12                        PC - GT  \n",
-       "13                    PC - Non-GT  \n",
-       "9                     A - Digital  \n",
-       "10                         A - TV  \n",
-       "11                    I - Digital  \n",
-       "6                              GT  \n",
-       "7                              KA  \n",
-       "8                           RKMBS  \n",
-       "325                            EC  \n",
-       "4           I - CRM Leads Offline  \n",
-       "5              P - CRM NU Offline  \n",
-       "318                      AD - CRM  \n",
-       "320          I - CRM Leads Online  \n",
-       "321                I - CRM others  \n",
-       "322                      NW - CRM  \n",
-       "324             P - CRM NU Online  \n",
-       "51     Nielsen Value Market Share  \n",
-       "316                    Landing UV  \n",
-       "3                      IFFO Ratio  \n",
-       "10068                   Total CRM  \n",
-       "10069               Total Channel  \n",
-       "10070                 Total Media  \n",
-       "10071                    Total PC  \n",
-       "314                 Deep Interest  \n",
-       "2                  Danone Offtake  \n",
-       "312                 CRM NU Online  \n",
-       "1                  CRM NU Offline  \n",
-       "310              CRM Leads Online  \n",
-       "0               CRM Leads Offline  \n",
-       "46                   Baidu Search  \n",
-       "45                     Ali Search  \n",
-       "306                  Active Leads  "
+       "                      Type 1                 Type 2                 Type 3\n",
+       "66             WTD - RI (AP)          WTD - RI (AP)          WTD - RI (AP)\n",
+       "65             WTD - RI (AC)          WTD - RI (AC)          WTD - RI (AC)\n",
+       "578                 WTD - RI               WTD - RI               WTD - RI\n",
+       "64            WTD - MBS (AP)         WTD - MBS (AP)         WTD - MBS (AP)\n",
+       "63            WTD - MBS (AC)         WTD - MBS (AC)         WTD - MBS (AC)\n",
+       "577                WTD - MBS              WTD - MBS              WTD - MBS\n",
+       "14             Trade Support          Trade Support          Trade Support\n",
+       "334    Total Brand Awareness  Total Brand Awareness  Total Brand Awareness\n",
+       "12                 Total A&P               Total PC                PC - GT\n",
+       "13                 Total A&P               Total PC            PC - Non-GT\n",
+       "9                  Total A&P            Total Media            A - Digital\n",
+       "10                 Total A&P            Total Media                 A - TV\n",
+       "11                 Total A&P            Total Media            I - Digital\n",
+       "6                  Total A&P          Total Channel                     GT\n",
+       "7                  Total A&P          Total Channel                     KA\n",
+       "8                  Total A&P          Total Channel                  RKMBS\n",
+       "325                Total A&P          Total Channel                     EC\n",
+       "4                  Total A&P              Total CRM  I - CRM Leads Offline\n",
+       "5                  Total A&P              Total CRM     P - CRM NU Offline\n",
+       "318                Total A&P              Total CRM               AD - CRM\n",
+       "320                Total A&P              Total CRM   I - CRM Leads Online\n",
+       "321                Total A&P              Total CRM         I - CRM others\n",
+       "322                Total A&P              Total CRM               NW - CRM\n",
+       "324                Total A&P              Total CRM      P - CRM NU Online\n",
+       "51              Market Share           Market Share           Market Share\n",
+       "316               Landing UV             Landing UV             Landing UV\n",
+       "3                 IFFO Ratio             IFFO Ratio             IFFO Ratio\n",
+       "10068                  Dummy              Total A&P              Total CRM\n",
+       "10069                  Dummy              Total A&P          Total Channel\n",
+       "10070                  Dummy              Total A&P            Total Media\n",
+       "10071                  Dummy              Total A&P               Total PC\n",
+       "314            Deep Interest          Deep Interest          Deep Interest\n",
+       "2             Danone Offtake         Danone Offtake         Danone Offtake\n",
+       "312            CRM NU Online          CRM NU Online          CRM NU Online\n",
+       "1             CRM NU Offline         CRM NU Offline         CRM NU Offline\n",
+       "310         CRM Leads Online       CRM Leads Online       CRM Leads Online\n",
+       "0          CRM Leads Offline      CRM Leads Offline      CRM Leads Offline\n",
+       "46              Baidu Search           Baidu Search           Baidu Search\n",
+       "45                Ali Search             Ali Search             Ali Search\n",
+       "306             Active Leads           Active Leads           Active Leads"
       ]
      },
      "execution_count": 22,
