Add KA and RKMBS execution logic

--- a/regional_process/read_sellout.ipynb
+++ b/regional_process/read_sellout.ipynb
@@ -531,6 +531,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "year = 2020\n",
     "for month in range(1, 7):\n",
@@ -570,6 +575,54 @@
    "metadata": {},
    "source": [
     "# Monthly Sellout"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mth_columns = ['YearMonth', 'Brand', 'Geo_Name', 'Region_Name', 'Channel', 'Sellout_SP_Value']\n",
+    "mth_df = pd.DataFrame(columns=mth_columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sellout_temp = sellout_with_acct.groupby(by = ['YearMonth', 'Channel'])['Sellout_SP_Value'].sum().reset_index()\n",
+    "sellout_temp['Brand'] = 'ELN DC'\n",
+    "sellout_temp['Geo_Name'] = '全国'\n",
+    "sellout_temp['Region_Name'] = '全国'\n",
+    "mth_df = mth_df.append(sellout_temp)\n",
+    "\n",
+    "sellout_temp = sellout_with_acct.groupby(by = ['YearMonth', 'Brand', 'Channel'])['Sellout_SP_Value'].sum().reset_index()\n",
+    "sellout_temp['Geo_Name'] = '全国'\n",
+    "sellout_temp['Region_Name'] = '全国'\n",
+    "mth_df = mth_df.append(sellout_temp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_file_path = config[\"project_path\"] \\\n",
+    "                        + \"/\" + config[\"temp_folder_path\"] \\\n",
+    "                        + \"/\" + 'monthly_sellout_summary_2019_2020.xlsx'\n",
+    "\n",
+    "mth_df.to_excel(output_file_path, header=True, index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Monthly Sellout for KA"
    ]
   },
   {
@@ -1127,6 +1180,67 @@
    "outputs": [],
    "source": [
     "gt_res_df = pd.merge(gt_res_df, ratio_df, on=['YearMonth', 'Geo_Name', 'Region_Name', 'Subregion_Name', 'Province_Name', 'Segment'], how='outer')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### P3M GT store sellout ratio by segment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p3m_columns = ['YearMonth', 'Geo_Name', 'Region_Name', 'Subregion_Name', 'Province_Name', 'Segment', 'P3M_ratio']\n",
+    "\n",
+    "p3m_df = pd.DataFrame(columns=p3m_columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "year = 2020\n",
+    "for month in range(1, 7):\n",
+    "    year_month = str(year) + str(month).zfill(2)\n",
+    "    p3m_list = get_past_3m(year_month)\n",
+    "    \n",
+    "    p3m_sellout = ratio_df.loc[ratio_df['YearMonth'].isin(p3m_list)].copy()\n",
+    "    sellout_temp = p3m_sellout.groupby(by = ['Geo_Name', 'Region_Name', 'Subregion_Name', 'Province_Name', 'Segment'])[['Segment_sellout', 'Total_Sellout']].sum().reset_index()\n",
+    "    sellout_temp['P3M_ratio'] = sellout_temp['Segment_sellout'] / sellout_temp['Total_Sellout']\n",
+    "    sellout_temp['YearMonth'] = year_month\n",
+    "    sellout_temp = sellout_temp.drop(columns=['Segment_sellout', 'Total_Sellout'])\n",
+    "    \n",
+    "    p3m_df = p3m_df.append(sellout_temp)\n",
+    "    \n",
+    "    \n",
+    "year = 2019\n",
+    "for month in range(1, 13):\n",
+    "    year_month = str(year) + str(month).zfill(2)\n",
+    "    p3m_list = get_past_3m(year_month)\n",
+    "    \n",
+    "    p3m_sellout = ratio_df.loc[ratio_df['YearMonth'].isin(p3m_list)].copy()\n",
+    "    sellout_temp = p3m_sellout.groupby(by = ['Geo_Name', 'Region_Name', 'Subregion_Name', 'Province_Name', 'Segment'])[['Segment_sellout', 'Total_Sellout']].sum().reset_index()\n",
+    "    sellout_temp['P3M_ratio'] = sellout_temp['Segment_sellout'] / sellout_temp['Total_Sellout']\n",
+    "    sellout_temp['YearMonth'] = year_month\n",
+    "    sellout_temp = sellout_temp.drop(columns=['Segment_sellout', 'Total_Sellout'])\n",
+    "    \n",
+    "    p3m_df = p3m_df.append(sellout_temp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gt_res_df = pd.merge(gt_res_df, p3m_df, on=['YearMonth', 'Geo_Name', 'Region_Name', 'Subregion_Name', 'Province_Name', 'Segment'], how='outer')"
    ]
   },
   {
